--- a/Booking/app/src/main/res/layout/activity_main.xml
+++ b/Booking/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,80 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/linlay1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/Titulli"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textAlignment="center"
+            android:layout_marginBottom="10dip"
+            android:text="Booking"
+            android:textSize="40dip"
+            />
+        <EditText
+            android:id="@+id/etSearch"
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:inputType="number"
+            android:hint="Search"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linlay2"
+        android:layout_width="match_parent"
+        android:layout_height="40dip"
+        android:layout_below="@+id/linlay1"
+        android:layout_marginTop="10dip"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:layout_weight="40"
+            android:text="Data:"
+            android:textSize="25dip"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:inputType="number"
+            android:layout_weight="60"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linlay3"
+        android:layout_width="match_parent"
+        android:layout_height="40dip"
+        android:layout_below="@+id/linlay2"
+        android:layout_marginTop="10dip"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:layout_weight="40"
+            android:text="Netët:"
+            android:textSize="25dip"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:layout_weight="60"/>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom|center_horizontal"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:layout_width="200dip"
+            android:layout_height="wrap_content"
+            android:text="Kerko" />
+    </LinearLayout>
 </RelativeLayout>
